# godotai

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SConstruct  setup.py
.github/workflows/: build.yml
docs/: build_system.md
plugin/: gdai.gdextension  plugin.cfg  plugin.gd
src/core/: godotai.cpp  godotai.hpp  register_types.cpp  register_types.hpp
tools/: __init__.py  base_tool.py  build.py  build_cmake.py  build_libgit2.py  build_libhv.py  build_plugin.py  ci_build.py  clean.py  config.json  config.py  generate_gdextension.py  init.py  init_vscode.py  install.py  test.py
